# spaceclimber

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Animation.cpp  Animation.h  Camera.cpp  Camera.h  Engine.cpp  Engine.h  FpsCounter.cpp  FpsCounter.h  JumpContactListener.cpp  JumpContactListener.h  MapGenerator.cpp  MapGenerator.h  Physics.cpp  Physics.h  Platform.cpp  Platform.h  Player.cpp  Player.h  ResourceManager.cpp  ResourceManager.h  SoundManager.cpp  SoundManager.h  main.cpp
src/PowerUps/: DoubleJump.cpp  DoubleJump.h  PowerUp.h  SafetyNet.cpp  SafetyNet.h  SpeedDown.cpp  SpeedDown.h  SpeedUp.cpp  SpeedUp.h  TimeStop.cpp  TimeStop.h
src/Scenes/: Game.cpp  Game.h  GameOver.cpp  GameOver.h  Options.cpp  Options.h  Pause.cpp  Pause.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Title.cpp  Title.h  TitleTransition.cpp  TitleTransition.h
src/Utility/: DebugDraw.cpp  DebugDraw.h  b2Helper.hpp
